Fix Who We Serve page with proper content and blue animated header

--- a/index.html
+++ b/index.html
@@ -84,7 +84,31 @@
         <section class="serve-wrapper">
           <h2>Who We Serve</h2>
           <div class="serve-intro">
-            <p>Veterans</p>
+            <p>We provide personalized guidance to help you navigate care options and make informed decisions for your loved ones.</p>
+          </div>
+          <div class="serve-sections">
+            <div class="serve-group">
+              <h3>Seniors</h3>
+              <ul>
+                <li>Individuals living at home exploring independent or supportive community living</li>
+                <li>Individuals currently in independent living whose care needs or costs are increasing</li>
+              </ul>
+            </div>
+            <div class="serve-group">
+              <h3>Families</h3>
+              <ul>
+                <li>Families needing guidance with immediate or upcoming placement decisions</li>
+                <li>Families seeking short-term care solutions outside the home</li>
+                <li>Families navigating emotional or complex transitions</li>
+              </ul>
+            </div>
+            <div class="serve-group">
+              <h3>Veterans</h3>
+              <ul>
+                <li>Guidance on VA Aid and Attendance benefit eligibility</li>
+                <li>Assistance identifying care options aligned with benefits and long-term needs</li>
+              </ul>
+            </div>
           </div>
         </section>
       </div>
