Update Houston image and format contact info

--- a/index.html
+++ b/index.html
@@ -220,17 +220,17 @@
               <div class="area-info">
                 <h3>Tampa Bay, Florida</h3>
                 <p>Serving Tampa, St. Petersburg, Clearwater, and surrounding areas</p>
-                <p><strong>Contact Rachel:</strong> rachel@benevolentsenior.com</p>
+                <p><strong>Contact Dawn:</strong><br>dbare@benevolentseniorservices.com</p>
               </div>
             </div>
             <div class="area-item">
               <div class="map-container">
-                <img src="/Dallas.jpeg" alt="Dallas Area Map" class="map-image">
+                <img src="/Houston.jpg" alt="Houston Area Map" class="map-image">
               </div>
               <div class="area-info">
-                <h3>Dallas, Texas</h3>
-                <p>Serving Dallas, Fort Worth, Plano, and surrounding areas</p>
-                <p><strong>Contact Sara:</strong> sara@benevolentsenior.com</p>
+                <h3>Houston, Texas</h3>
+                <p>Serving Houston, The Woodlands, Sugar Land, and surrounding areas</p>
+                <p><strong>Contact Victoria:</strong> victoria@benevolentseniorservices.com</p>
               </div>
             </div>
           </div>
