Add SEO optimization and fix footer location

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
               <div class="area-info">
                 <h3>Tampa Bay, Florida</h3>
                 <p>Serving Tampa, St. Petersburg, Clearwater, and surrounding areas</p>
-                <p><strong>Contact Dawn:</strong><br>dbare@benevolentseniorservices.com</p>
+                <p><strong>Contact Dawn:</strong> dbare@benevolentseniorservices.com</p>
               </div>
             </div>
             <div class="area-item">
@@ -439,7 +439,7 @@
           </div>
           
           <div class="simple-footer">
-            <p>&copy; 2026 Benevolent Senior Services | Tampa Bay, FL & Dallas, TX | 833-686-4440</p>
+            <p>&copy; 2026 Benevolent Senior Services | Tampa Bay, FL & Houston, TX | 833-686-4440</p>
           </div>
         </section>
       </div>
